--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AirMCU-Jlink"]
 	path = AirMCU-Jlink
-	url = https://gitee.com/openLuat/AirMCU-Jlink.git
+	url = https://github.com/Air-duino/AirMCU-Jlink.git
